<resources>
    <string name="app_name" translatable="false">TrassTarea</string>
    <string name="app_slogan">Tus tareas, tu ritmo, tu éxito</string>
    <string name="bt_entrar_text">Entrar</string>
    <string name="iv_quedan">Quedan: </string>
    <string name="iv_dias"> días</string>
    <string name="tv_sin_tareas">No hay tareas disponibles</string>
    <string name="item_acerca">Acerca de…</string>
    <string name="item_salir">Salir</string>
    <string name="item_agregar">Añadir</string>
    <string name="item_prioritarias">Prioritarias</string>
    <string name="despedida_toast">¡Hasta pronto!</string>
    <string name="mensaje_acerca">Desarrollado por Jackson, 2025</string>
    <string name="alert_aceptar">Aceptar</string>
    <string name="alert_cancelar">Cancelar</string>
    <string name="titulo_dialog_borrar">Eliminar una tarea</string>
    <string name="titulo_dialog_archivo">Editar un archivo adjunto</string>
    <string name="mensaje_dialog_borrar">¿Estás seguro de que quieres borrar esta tarea?</string>
    <string name="mensaje_dialog_archivo">¿Qué deseas hacer con el archivo?</string>
    <string name="operacion_error">"Error: No se ha podido realizar ninguna operación"</string>
    <string name="operacion_actualizar">"Tarea actualizada con éxito"</string>
    <string name="operacion_agregar">Tarea agregada con éxito</string>
    <string name="operacion_borrar">Tarea borrada con éxito</string>
    <string name="crear_tarea">Crear tarea</string>
    <string name="btn_siguiente">Siguiente</string>
    <string name="btn_volver">Volver</string>
    <string name="btn_guardar">Guardar</string>
    <string name="titulo_tarea">Título</string>
    <string name="fecha_creacion_tarea">Fecha inicio</string>
    <string name="fecha_objetivo_tarea">Fecha objetivo</string>
    <string name="progreso_tarea">Progreso</string>
    <string name="prioridad_tarea">Prioridad</string>
    <string name="prioridad_texto_check">Sí/No</string>
    <string name="descripcion_tarea">Descripción</string>
    <string name="descripcion_tarea_hint">Describe tu tarea…</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mc_borrar">Borrar</string>
    <string name="mc_editar">Editar</string>
    <string name="editar_tarea">Editar tarea</string>
    <string name="error">Error</string>
    <string name="invalid_input_error">Debes rellenar todos los campos</string>

    <string-array name="items_progreso_tarea">
        <item>No iniciada</item>
        <item>Iniciada</item>
        <item>Avanzada</item>
        <item>Casi finalizada</item>
        <item>Finalizada</item>
    </string-array>
    <string name="title_activity_settings" translatable="false">SettingsActivity</string>
    <string name="item_preferencias">Preferencias</string>
    <string name="settings_cat_visualizacion">Visualización</string>
    <string name="settings_cat_ordenacion">Ordenación</string>
    <string name="settings_cat_almacenamiento">Almacenamiento</string>
    <string name="settings_tema">Tema</string>
    <string name="settings_fuente">Tamaño de la letra</string>
    <string name="settings_criterio">Criterio</string>
    <string name="settings_orden">Orden</string>
    <string name="settings_sd">Almacenamiento en tarjeta SD</string>
    <string name="tv_edit_file">Gestiona los archivos de la tarea</string>
    <string name="descripcion">Descripción</string>
    <string name="archivo_seleccionado">Archivo adjuntado correctamente</string>
    <string name="archivo_eliminado">Archivo marcado para eliminación, para conservarlo cancela la edición</string>
    <string name="summary_tema_claro">Claro</string>
    <string name="summary_tema_oscuro">Oscuro</string>
    <string name="summary_orden_asc">Ascendente</string>
    <string name="summary_orden_desc">Descendente</string>
    <string name="no_archivo">Sin archivo</string>
    <string name="reproduciendo">"Reproduciendo…"</string>
</resources>