<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/menu_group">
        <item
            android:id="@+id/item_agregar"
            android:icon="@android:drawable/ic_menu_add"
            android:title="@string/item_agregar"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/item_prioritarias"
            android:icon="@android:drawable/btn_star_big_on"
            android:title="@string/item_prioritarias"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/item_acerca"
            android:title="@string/item_acerca" />
        <item
            android:id="@+id/item_salir"
            android:title="@string/item_salir" />
    </group>
</menu>