<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="32dp"
    tools:context=".vista.FragmentoA">

    <EditText
        android:id="@+id/et_titulo"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/et_fecha_inicio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_tarea"
        app:layout_constraintBaseline_toBaselineOf="@+id/et_titulo"
        app:layout_constraintEnd_toStartOf="@+id/et_titulo"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_fecha_objetivo"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="datetime"
        app:layout_constraintBottom_toTopOf="@+id/sp_progreso"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/et_fecha_inicio" />

    <Spinner
        android:id="@+id/sp_progreso"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:entries="@array/entradasSpinner"
        app:layout_constraintBottom_toTopOf="@+id/cb_prioridad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/et_fecha_objetivo" />

    <CheckBox
        android:id="@+id/cb_prioridad"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/prioridad_texto_check"
        app:layout_constraintBottom_toTopOf="@+id/bt_siguiente"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/sp_progreso" />

    <Button
        android:id="@+id/bt_siguiente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_siguiente"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cb_prioridad" />

    <EditText
        android:id="@+id/et_fecha_inicio"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="datetime"
        app:layout_constraintBottom_toTopOf="@+id/et_fecha_objetivo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/et_titulo" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fecha_objetivo_tarea"
        app:layout_constraintBaseline_toBaselineOf="@+id/et_fecha_objetivo"
        app:layout_constraintEnd_toStartOf="@+id/et_fecha_objetivo"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/progreso_tarea"
        app:layout_constraintBaseline_toBaselineOf="@+id/sp_progreso"
        app:layout_constraintEnd_toStartOf="@+id/sp_progreso"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prioridad_tarea"
        app:layout_constraintBaseline_toBaselineOf="@+id/cb_prioridad"
        app:layout_constraintEnd_toStartOf="@+id/cb_prioridad"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fecha_creacion_tarea"
        app:layout_constraintBaseline_toBaselineOf="@+id/et_fecha_inicio"
        app:layout_constraintEnd_toStartOf="@+id/et_fecha_inicio"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>